--- a/style.css
+++ b/style.css
@@ -50,3 +50,26 @@ body{
     background: rgb(255, 255, 255);
     border: 2px solid rgb(147, 186, 168);
 }
+
+.orange-btns{
+    height: 50px;
+    width: 50px;
+    margin: 8px;
+    border-radius: 50%;
+    box-shadow: 5px 5px 5px rgba(0, 51, 255, 0.5);
+    border: none;
+    background-color: orange;
+    color: white;
+    font-size: 20px;
+    text-align: center;
+}
+
+.grey-btns{
+    height: 50px;
+    width: 50px;
+    margin: 8px;
+    border-radius: 50%;
+    box-shadow: 5px 5px 5px rgba(0, 51, 255, 0.5);
+    border: none;
+    background-color: rgba(128, 128, 128, 0.714);
+}
